// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders with children 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ul
    className="css-gkw1j5 "
>
    <ListItem
        className={null}
        isSelected={false}
    />
    <ListItem
        className={null}
        isSelected={false}
    />
    <ListItem
        className={null}
        isSelected={false}
    />
</ul>,
  "nodes": Array [
    <ul
      className="css-gkw1j5 "
>
      <ListItem
            className={null}
            isSelected={false}
      />
      <ListItem
            className={null}
            isSelected={false}
      />
      <ListItem
            className={null}
            isSelected={false}
      />
</ul>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <List
        className=""
>
        <ListItem
                className={null}
                isSelected={false}
        />
        <ListItem
                className={null}
                isSelected={false}
        />
        <ListItem
                className={null}
                isSelected={false}
        />
</List>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": List {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [
            <ListItem
              className={null}
              isSelected={false}
/>,
            <ListItem
              className={null}
              isSelected={false}
/>,
            <ListItem
              className={null}
              isSelected={false}
/>,
          ],
          "className": "",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ul
          className="css-gkw1j5 "
>
          <ListItem
                    className={null}
                    isSelected={false}
          />
          <ListItem
                    className={null}
                    isSelected={false}
          />
          <ListItem
                    className={null}
                    isSelected={false}
          />
</ul>,
        "_debugID": 2,
        "_renderedOutput": <ul
          className="css-gkw1j5 "
>
          <ListItem
                    className={null}
                    isSelected={false}
          />
          <ListItem
                    className={null}
                    isSelected={false}
          />
          <ListItem
                    className={null}
                    isSelected={false}
          />
</ul>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <List
    className=""
>
    <ListItem
        className={null}
        isSelected={false}
    />
    <ListItem
        className={null}
        isSelected={false}
    />
    <ListItem
        className={null}
        isSelected={false}
    />
</List>,
}
`;

exports[`<List /> renders without children 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ul
    className="css-gkw1j5 "
/>,
  "nodes": Array [
    <ul
      className="css-gkw1j5 "
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <List
        className=""
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": List {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ul
          className="css-gkw1j5 "
/>,
        "_debugID": 4,
        "_renderedOutput": <ul
          className="css-gkw1j5 "
/>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <List
    className=""
/>,
}
`;
